KayP Page Polishing

--- a/client/pages/offer-kayp.html
+++ b/client/pages/offer-kayp.html
@@ -274,7 +274,7 @@ so it doesn't appear above the 1st item or below the last item. -->
         <!-- left leaf -->
 
         <h3 class="asp-headline">
-          <span class="asp-number">10&nbsp;Million+</span>
+          <span class="asp-number">10,000+</span>
           <br>
           kick‑started their journey with us
         </h3>
@@ -291,7 +291,7 @@ so it doesn't appear above the 1st item or below the last item. -->
         <img src="../assets/google-play.png" alt="Google Play" loading="lazy">
       </div>
 
-      <p class="asp-reviews">250&nbsp;000+ five‑star reviews from happy users</p>
+      <p class="asp-reviews">2,500+ five‑star reviews from happy users</p>
     </div>
   </section>
 
@@ -490,7 +490,7 @@ placeholder.replaceWith(iframe);
           <span class="rating-summary__stars-base" aria-hidden="true">★★★★★</span>
         </div>
         <div class="rating-summary__score">
-          <strong>4.8/5</strong> (312,143 reviews)
+          <strong>4.8/5</strong> (2,691 reviews)
         </div>
       </div>
 
@@ -903,7 +903,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
         </div>
         <div class="reviews-hero__meta">
           <p class="reviews-hero__headline">4.8 out of 5</p>
-          <p class="reviews-hero__sub">Based on 312,143 reviews verified purchases</p>
+          <p class="reviews-hero__sub">Based on 2,691 reviews verified purchases</p>
         </div>
       </div>
       <ul class="reviews-breakdown" aria-label="Rating distribution">
@@ -1146,7 +1146,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
       localStorage.setItem('rtb_currency', JSON.stringify(window.RTB_CURRENCY));
     })();
   </script>
-  <script src="../scripts/offer.js"></script>
+  <script src="../scripts/offer-kayp.js"></script>
   <!-- leave Stripe.js -->
 
   <!-- then YOUR payment.js – pick one path and delete the other -->
