--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -663,7 +663,7 @@ placeholder.replaceWith(iframe);
         By continuing, you agree to our
         <a href="tos.html" target="_blank">terms</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
-         Covered by
+        Covered by
         <a href="#moneyBackGuarantee" id="moneyBackGuaranteeLink" class="mbg-scroll-link">
           Money-Back Guarantee
         </a>.
@@ -688,8 +688,8 @@ placeholder.replaceWith(iframe);
 
   <p id="postPayNote" class="post-pay-note" style="display:none;text-align:center;margin-top:12px;">
     ✅ <strong>After checkout
-       <!-- (<span id="checkoutPrice">—</span>) -->
-       , your plan unlocks immediately</strong> – you’ll
+      <!-- (<span id="checkoutPrice">—</span>) -->
+      , your plan unlocks immediately</strong> – you’ll
     land on your dashboard.
   </p>
 
@@ -720,6 +720,10 @@ Card
 </div> -->
 
       <p id="planSummary" class="plan-summary">12-Week Plan</p>
+      <p class="payment-powered">
+        Payments are securely processed by Stripe on behalf of Raising The Bar App Ltd, the platform powering this
+        experience.
+      </p>
       <!-- PayPal -->
       <!-- <div id="paypalMarkContainer" style="margin-top:20px;"></div> -->
 
@@ -941,12 +945,12 @@ alert('Could not initialise PayPal. Please refresh and try again.');
 
     <div class="reviews-pagination" id="reviewsPagination" aria-label="Review pages"></div>
 
-      <div class="post-faq-cta">
-    <button type="button" class="claim-program-btn" data-open-value-modal>
-      Claim My Plan
-    </button>
-  </div>
-  
+    <div class="post-faq-cta">
+      <button type="button" class="claim-program-btn" data-open-value-modal>
+        Claim My Plan
+      </button>
+    </div>
+
   </section>
 
   <!-- FAQ Section -->
