--- a/client/pages/log-in-offer-ryan.html
+++ b/client/pages/log-in-offer-ryan.html
@@ -66,7 +66,6 @@
 <body>
   <div class="header">
     <div class="logo">
-      <a href="../pages/home.html">
         <img id="logo" class="fade-in" src="../assets/ryan-logo.png" alt="GAINS+ Logo">
       </a>
     </div>
@@ -111,7 +110,7 @@
       <p class="powered">POWERED BY</p>
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="home.html">Start Training</a>
+        <a href="forms-ryan.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
