--- a/client/pages/log-in-vital.html
+++ b/client/pages/log-in-vital.html
@@ -60,7 +60,6 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
 <body>
   <div class="header">
     <div class="logo">
-      <a href="../pages/home.html">
           <img id="logo" class="fade-in" src="../assets/vital-root-logo.png" alt="GAINS+ Logo">
         </a>
       </div>
@@ -99,7 +98,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
       <p class="powered">POWERED BY</p>
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="home.html">Start Training</a>
+        <a href="forms-vital.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
