--- a/client/pages/offer-vital.html
+++ b/client/pages/offer-vital.html
@@ -117,7 +117,6 @@ src="https://www.paypal.com/sdk/js?client-id=AcygnP6DJSFGbIeyUa2BdGdznCQQk-qXjME
   </div>
   <div class="header">
     <div class="logo">
-      <a href="../pages/home.html">
         <img id="logo" class="logo" src="../assets/vital-root-logo.png" alt="GAINS+ Logo">
       </a>
     </div>
@@ -999,7 +998,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
       <p class="powered">POWERED BY</p>
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="home.html">Start Training</a>
+        <a href="forms-vital.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
