--- a/client/pages/dashboard-ryan.html
+++ b/client/pages/dashboard-ryan.html
@@ -264,7 +264,7 @@
       <p class="powered">POWERED BY</p>
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="home.html">Start Training</a>
+        <a href="dashboard-ryan.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
