--- a/client/pages/nutrition-tracker-vital.html
+++ b/client/pages/nutrition-tracker-vital.html
@@ -475,7 +475,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
       <p class="powered">POWERED BY</p>
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="home.html">Start Training</a>
+        <a href="dashboard-vital.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
