--- a/client/pages/workout-tracker-vital.html
+++ b/client/pages/workout-tracker-vital.html
@@ -546,7 +546,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
       <p class="powered">POWERED BY</p>
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="home.html">Start Training</a>
+        <a href="dashboard-vital.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
@@ -572,7 +572,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
   <script type="module" defer src="../scripts/modules/my-progress.js"></script>
 
   <!-- then the tracker file that calls those globals -->
-  <script defer src="../scripts/workout-tracker.js"></script>
+  <script defer src="../scripts/workout-tracker-vital.js"></script>
 </body>
 
 </html>
