Updated Creator Onboarding Copy

--- a/client/pages/creator-onboarding.html
+++ b/client/pages/creator-onboarding.html
@@ -81,13 +81,16 @@
         </div>
       </div>
       <h1 id="onboarding-start">Set up your creator payouts</h1>
-      <p class="lede" id="intro-copy">We'll open Stripe in a new tab so you can verify your details and add a payout account.</p>
+      <p class="lede" id="intro-copy">We'll open Stripe in a new tab so you can verify your details and add a payout
+        account.</p>
 
       <div class="input-row" style="margin: 16px 0 12px;">
         <label for="slug-input" class="lede" style="display: block; margin-bottom: 6px;">Invite code</label>
         <input id="slug-input" name="slug" type="text" inputmode="text" autocomplete="off" spellcheck="false"
-          placeholder="e.g. creator-name" aria-describedby="slug-help" style="width: 100%; padding: 12px 14px; border-radius: 10px; border: 1px solid #d0d0d0; font-size: 16px;">
-        <p id="slug-help" class="lede" style="margin: 6px 0 0; color: #4a4a4a;">If you don't know your invite code, please contact us.</p>
+          placeholder="e.g. creator-name" aria-describedby="slug-help"
+          style="width: 100%; padding: 12px 14px; border-radius: 10px; border: 1px solid #d0d0d0; font-size: 16px;">
+        <p id="slug-help" class="lede" style="margin: 6px 0 0; color: #4a4a4a;">If you don't know your invite code,
+          please contact us.</p>
       </div>
 
       <div class="cta-row">
@@ -96,8 +99,11 @@
       </div>
 
       <div class="meta-panel" style="margin-top: 20px;">
-        <h2 style="margin: 0 0 8px;">Why this link is stable</h2>
-        <p style="margin: 0;">The Stripe link is created only after you click the button above, so preview bots can't burn your invite.</p>
+        <h2 style="margin: 0 0 8px;">About this Stripe setup</h2>
+        <p style="margin: 0;">
+          Clicking the button above creates a secure onboarding link that’s unique to your creator account and handled
+          directly by Stripe.
+        </p>
       </div>
     </section>
 
