--- a/client/pages/forms-ironverse.html
+++ b/client/pages/forms-ironverse.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-  <link rel="preload" as="image" href="../assets/kayp-logo.png" fetchpriority="high">
+  <link rel="preload" as="image" href="../assets/ironverse-logo.png" fetchpriority="high">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
   <title>Let’s Build Your Plan</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
     rel="stylesheet">
-  <link href="../styles/forms-kayp.css" rel="stylesheet">
+  <link href="../styles/forms-ironverse.css" rel="stylesheet">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9CSNHSLQQ"></script>
   <script>
@@ -81,9 +81,9 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
       <div class="logo">
           <picture>
             <!-- WebP first -->
-            <source type="image/png" srcset="/assets/kayp-logo.png">
+            <source type="image/png" srcset="/assets/ironverse-logo.png">
 
-            <img id="logo" src="/assets/kayp-logo.png" alt="GAINS+ Logo" width="224" height="100"
+            <img id="logo" src="/assets/ironverse-logo.png" alt="GAINS+ Logo" width="224" height="100"
               loading="eager" fetchpriority="high" decoding="async">
           </picture>
         </a>
@@ -94,7 +94,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
     </div>
 
     <div id="incentive-box">
-      <span class="incentive-text">Complete this quiz to build your personalised <br> 12-Week Plan</span>
+      <span class="incentive-text">🎁 Complete this quiz <strong>now</strong> to get your <strong>full 12-Week Plan</strong></span>
       <button id="incentive-close" aria-label="Close">&times;</button>
     </div>
 
@@ -115,7 +115,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
           <!-- <strong class="subheading">No other app does what we do.</strong><br><br>
           Other apps just track. <strong>We use what you track to adapt workouts & meals</strong> so you
           <strong>get fit faster</strong>.<br><br> -->
-          <strong>Complete this 60-second quiz</strong> to build a workout and meal plan tailored to how you train, eat,
+          <strong>Complete this 60-second quiz</strong> to get a workout and meal plan tailored to how you train, eat,
           and recover.
 
           <br>
@@ -159,7 +159,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
 
   <!-- <script src="scripts/exercise.js"></script>
   <script src="scripts/meals.js"></script> -->
-  <script type="module" src="../scripts/forms-kayp.js"></script>
+  <script type="module" src="../scripts/forms-ironverse.js"></script>
   <script type="module">
     import { initCookieBanner } from '../scripts/modules/cookieBanner.js';
     initCookieBanner();
