--- a/client/pages/forms-decoded.html
+++ b/client/pages/forms-decoded.html
@@ -5,7 +5,7 @@
   <link rel="preload" as="image" href="../assets/decoded-gains-logo.png" fetchpriority="high">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
   <title>Let’s Build Your Plan</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
     rel="stylesheet">
@@ -44,23 +44,25 @@
   </script>
   <!-- TikTok Pixel Code End -->
   <!-- Meta Pixel Code -->
-<!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '2589073464764526');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
+  <!-- Meta Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '2589073464764526');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
 </head>
 
 <body>
@@ -78,14 +80,14 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
   </div>
   <div class="scroll">
     <div class="header">
-      <div class="logo">  
-          <picture>
-            <!-- WebP first -->
-            <source type="image/png" srcset="/assets/decoded-gains-logo.png">
+      <div class="logo">
+        <picture>
+          <!-- WebP first -->
+          <source type="image/png" srcset="/assets/decoded-gains-logo.png">
 
-            <img id="logo" src="/assets/decoded-gains-logo.png" alt="GAINS+ Logo" width="224" height="100"
-              loading="eager" fetchpriority="high" decoding="async">
-          </picture>
+          <img id="logo" src="/assets/decoded-gains-logo.png" alt="GAINS+ Logo" width="224" height="100" loading="eager"
+            fetchpriority="high" decoding="async">
+        </picture>
         </a>
       </div>
       <!-- <div class="dark-mode-button">
@@ -94,14 +96,14 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
     </div>
 
     <div id="incentive-box">
-      <span class="incentive-text">🎁 Complete this quiz <strong>now</strong> to get your <strong>full 12-Week Plan</strong></span>
+      <span class="incentive-text">Complete this quiz to build your personalised <br> 12-Week Plan</span>
       <button id="incentive-close" aria-label="Close">&times;</button>
     </div>
 
     <div class="form-container form-wrapper">
       <div class="form-question">
         <h2>Question</h2>
-      </div> 
+      </div>
       <div class="form-options">
         <ol>
           <li class="button-like">Option 1</li>
@@ -115,7 +117,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
           <!-- <strong class="subheading">No other app does what we do.</strong><br><br>
           Other apps just track. <strong>We use what you track to adapt workouts & meals</strong> so you
           <strong>get fit faster</strong>.<br><br> -->
-          <strong>Complete this 60-second quiz</strong> to get a workout and meal plan tailored to how you train, eat,
+          <strong>Complete this 60-second quiz</strong> to build a workout and meal plan tailored to how you train, eat,
           and recover.
 
           <br>
