--- a/client/pages/forms-vital.html
+++ b/client/pages/forms-vital.html
@@ -94,7 +94,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
     </div>
 
     <div id="incentive-box">
-      <span class="incentive-text">🎁 Complete this quiz <strong>now</strong> to get your <strong>full 12-Week Plan</strong></span>
+      <span class="incentive-text">Complete this quiz to build your personalised <br> 12-Week Plan</span>
       <button id="incentive-close" aria-label="Close">&times;</button>
     </div>
 
@@ -115,7 +115,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
           <!-- <strong class="subheading">No other app does what we do.</strong><br><br>
           Other apps just track. <strong>We use what you track to adapt workouts & meals</strong> so you
           <strong>get fit faster</strong>.<br><br> -->
-          <strong>Complete this 60-second quiz</strong> to get a workout and meal plan tailored to how you train, eat,
+          <strong>Complete this 60-second quiz</strong> to build a workout and meal plan tailored to how you train, eat,
           and recover.
 
           <br>
