Ironverse Pages Polish

--- a/client/pages/pinned-post-script.html
+++ b/client/pages/pinned-post-script.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32" />
-  <title>Your Pinned Post (Copy This)</title>
+  <title>Your Pinned Post</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="../styles/pinned-post-script.css" rel="stylesheet" />
 </head>
@@ -19,14 +20,14 @@
     </div>
 
     <div class="cta-group">
-      <a class="primary" href="#script">Jump to the script to copy</a>
+      <a class="primary" href="#script">Go to script</a>
     </div>
   </header>
 
   <main class="page">
     <section class="hero">
       <p class="eyebrow">Film once. Pin it. Done.</p>
-      <h1>Your Pinned Post (Copy This)</h1>
+      <h1>Your Pinned Post</h1>
       <p class="lede">This post does the selling for you. You do not need to be creative.</p>
 
       <div class="hero-cards">
@@ -111,7 +112,8 @@
             <span class="script-badge">Hook</span>
             <span class="script-note">Say this first.</span>
           </div>
-          <pre class="script-box"><code>If you’ve ever wondered how I train, eat, and stay consistent — this is exactly how I do it.</code></pre>
+          <pre
+            class="script-box"><code>If you’ve ever wondered how I train, eat, and stay consistent — this is exactly how I do it.</code></pre>
         </div>
 
         <div class="script-panel">
@@ -131,13 +133,15 @@ It keeps me consistent, even on busy weeks, because I don’t need to decide wha
             <span class="script-badge">CTA</span>
             <span class="script-note">End with this.</span>
           </div>
-          <pre class="script-box"><code>If you want to follow the same structure I use, it’s linked in my bio.</code></pre>
+          <pre
+            class="script-box"><code>If you want to follow the same structure I use, it’s linked in my bio.</code></pre>
         </div>
       </div>
 
       <div class="why">
         <h3>Quick Reminder</h3>
-        <p class="muted">You are not trying to convince anyone. You are just making it easy for the right people to click.</p>
+        <p class="muted">You are not trying to convince anyone. You are just making it easy for the right people to
+          click.</p>
       </div>
     </section>
 
@@ -160,22 +164,37 @@ It keeps me consistent, even on busy weeks, because I don’t need to decide wha
 
     <section class="section closing" id="done">
       <div class="section-header">
-        <h2>You only need one pinned post.</h2>
-        <p class="lede">Once it’s live, your regular content does the rest.</p>
+        <h2>Do this before moving on.</h2>
+        <p class="lede">
+          Film the post. Post it. Pin it.
+          <br />
+          Do not continue until this is live.
+        </p>
+      </div>
+
+      <div class="panel" style="margin-top: 16px;">
+        <p class="rule" style="margin-bottom: 12px;">
+          Once your pinned post is live:
+        </p>
+        <a class="primary" href="../pages/creator-sales-guide.html#step-4">
+          Return to the Sales Guide
+        </a>
       </div>
     </section>
+
   </main>
 
-    <footer class="footer">
-        <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
-        <div class="footer-links">
-            <a href="../home.html">Home</a>
-            <span class="separator">|</span>
-            <a href="legal-overview.html">Policies</a>
-            <span class="separator">|</span>
-            <a href="contact-us.html">Contact</a>
-        </div>
-    </footer>
+  <footer class="footer">
+    <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
+    <div class="footer-links">
+      <a href="../home.html">Home</a>
+      <span class="separator">|</span>
+      <a href="legal-overview.html">Policies</a>
+      <span class="separator">|</span>
+      <a href="contact-us.html">Contact</a>
+    </div>
+  </footer>
 
 </body>
+
 </html>
