--- a/client/pages/creator-sales-guide.html
+++ b/client/pages/creator-sales-guide.html
@@ -27,20 +27,20 @@
     <section class="hero">
       <p class="eyebrow">IKEA-style instructions for monetising your audience</p>
       <h1>How to Drive Sales to Your Branded App</h1>
-      <p class="lede">Follow this exactly. Do not improvise.</p>
+      <p class="lede">Follow this playbook as written—keep it simple.</p>
       <!-- <div class="hero-placeholder">Placeholder for hero visual</div> -->
     </section>
 
     <section class="section intro" id="read-first">
       <div class="section-header">
         <h2>Section 0: Read This First</h2>
-        <p class="lede">Remove thinking before you even scroll.</p>
+        <p class="lede">Keep it straightforward before you even scroll.</p>
       </div>
       <div class="grid two">
         <div class="panel">
           <ul class="bullet-list">
             <li>This page replaces all marketing advice.</li>
-            <li>You are not required to be creative.</li>
+            <li>You don’t need to reinvent anything.</li>
             <li>You are not selling software.</li>
             <li>Your job is only to route attention.</li>
           </ul>
@@ -48,7 +48,7 @@
         <div class="panel rule-box">
           <p class="rule-title">Rule</p>
           <p>If you follow these steps, the system works.</p>
-          <p>If you skip or change steps, results drop.</p>
+          <p>If you skip or change steps, expect weaker results.</p>
         </div>
       </div>
     </section>
@@ -56,7 +56,7 @@
     <section class="section" id="traffic-flow">
       <div class="section-header">
         <h2>Section 1: The Only Traffic Flow</h2>
-        <p class="lede">This is the only path you optimise.</p>
+        <p class="lede">This is the path you focus your energy on.</p>
       </div>
       <div class="flow">
         <div class="flow-item">Content</div>
@@ -76,9 +76,9 @@
           </ul>
         </div>
         <div class="panel hard-rule">
-          <p><strong>You do not sell in captions.</strong></p>
-          <p><strong>You do not DM sell.</strong></p>
-          <p><strong>You do not explain features.</strong></p>
+          <p><strong>Avoid selling in captions.</strong></p>
+          <p><strong>Avoid DM selling.</strong></p>
+          <p><strong>Skip feature explainers.</strong></p>
         </div>
       </div>
     </section>
@@ -96,7 +96,7 @@
             <li>One link in bio.</li>
             <li>Same link everywhere.</li>
           </ul>
-          <h3>Do NOT do this:</h3>
+          <h3>Avoid doing this:</h3>
           <ul class="bullet-list wrong">
             <li>Multiple links.</li>
             <li>Link trees.</li>
@@ -119,7 +119,7 @@
       </div>
       <div class="grid two">
         <div class="panel">
-          <p class="rule">Your bio must make people curious enough to click, not informed enough to understand.</p>
+          <p class="rule">Your bio should spark curiosity to click, not fully explain everything.</p>
           <h3>Good bio patterns (pick one):</h3>
           <ul class="bullet-list">
             <li>“This is the system I follow to stay consistent ↓”</li>
@@ -163,7 +163,7 @@
 
           <div style="margin-top: 14px;">
             <p class="muted" style="margin: 0 0 10px;">
-              Copy the pinned post script. Post it. Pin it.
+              Use the pinned post script, post it, then pin it.
             </p>
             <a class="primary" href="../pages/pinned-post-script.html" target="_blank" rel="noopener">
               Use the pinned post script
@@ -175,7 +175,7 @@
         </div>
       </div>
       <div class="checkpoint">New visitors should understand your system before scrolling.</div>
-      <p><strong>If you skip this step, the rest of the system underperforms.</strong></p>
+      <p><strong>Skipping this step makes the rest of the system underperform.</strong></p>
     </section>
 
     <section class="section checkpoint-block" id="step-3-check">
@@ -190,14 +190,14 @@
           <li><span>☑</span> Bio text changed to a CTA</li>
           <li><span>☑</span> At least one pinned post live</li>
         </ul>
-        <p class="rule"><strong>If all three are not done, stop here.</strong></p>
+        <p class="rule"><strong>Make sure all three are done before moving on.</strong></p>
       </div>
     </section>
 
     <section class="section" id="step-4">
       <div class="section-header">
         <p class="step">Step 4</p>
-        <h2>Keep Posting Normally (Do NOT Change This)</h2>
+        <h2>Keep Posting Normally (don’t overthink this)</h2>
         <p class="lede">This is where people mess up. Stay consistent.</p>
       </div>
       <div class="grid two">
@@ -281,7 +281,7 @@
     <section class="section" id="what-not">
       <div class="section-header">
         <h2>If You Do These, Sales Drop</h2>
-        <p class="lede">Hard stops. Do not cross these lines.</p>
+        <p class="lede">These hurt results—avoid them.</p>
       </div>
       <div class="grid two">
         <div class="panel danger">
