--- a/client/pages/pinned-post-script.html
+++ b/client/pages/pinned-post-script.html
@@ -28,7 +28,7 @@
     <section class="hero">
       <p class="eyebrow">Film once. Pin it. Done.</p>
       <h1>Your Pinned Post</h1>
-      <p class="lede">This post does the selling for you. You do not need to be creative.</p>
+      <p class="lede">This post does the selling for you, no need to overproduce.</p>
 
       <div class="hero-cards">
         <div class="mini-card">
@@ -64,7 +64,7 @@
         <div class="panel rule-box">
           <p class="rule-title">Rule</p>
           <p>This post must feel like normal content.</p>
-          <p>Do not explain features. Do not mention “app”.</p>
+          <p>Keep it about your structure—skip features or “app” talk.</p>
         </div>
       </div>
     </section>
@@ -89,7 +89,7 @@
         </div>
 
         <div class="panel danger">
-          <h3>Do NOT do this:</h3>
+          <h3>Avoid doing this:</h3>
           <ul class="bullet-list wrong">
             <li>Explain features or how the product works.</li>
             <li>Say “AI”, “app”, “macros”, “generator”, “software”.</li>
@@ -168,7 +168,7 @@ It keeps me consistent, even on busy weeks, because I don’t need to decide wha
         <p class="lede">
           Film the post. Post it. Pin it.
           <br />
-          Do not continue until this is live.
+          Make sure it’s live before you continue.
         </p>
       </div>
 
