--- a/client/pages/offer-kayp.html
+++ b/client/pages/offer-kayp.html
@@ -356,12 +356,12 @@ placeholder.replaceWith(iframe);
 </section> -->
 
     <h2 class="complete-workout-heading">
-      Complete Workout Program
+      Complete Workout Plan
     </h2>
     <ul class="workout-benefits">
       <li><strong>Workouts that adapt</strong> based on your performance and feedback</li>
       <li><strong>Meals that match your routine</strong> and fit around your lifestyle</li>
-      <li><strong>AI-powered tools</strong> - the Meal and Body Scanner track and visualize your progress</li>
+      <li><strong>Progress tools</strong> that show what’s working and what to adjust</li>
       <!-- <li>1-on-1 online coaching with your assigned coach for expert guidance</li> -->
     </ul>
   </div>
@@ -421,7 +421,7 @@ placeholder.replaceWith(iframe);
         <span class="discount-label">Discount Expires In:</span>
         <span class="time-remaining" id="countdownTimer">10:00</span>
       </div>
-      <p class="first-1000">🔥 2,000+ claimed their plan today. You're next</p>
+      <p class="first-1000">🔥 82 claimed their plan today. You're next</p>
     </div>
 
     <!-- Offer Cards -->
@@ -429,11 +429,11 @@ placeholder.replaceWith(iframe);
     <section id="socialProof" class="social-proof">
       <img src="../assets/muscular-silhouette.webp" alt="Coach silhouette" class="social-proof__coach" />
       <p class="social-proof__headline">
-        947 people bought workout plans in the last hour
+        17 people bought plans in the last hour
       </p>
       <div class="social-proof__recent">
-        <span class="social-proof__tag">ava 12-Week Plan</span>
-        <span class="social-proof__tag">ethan 12-Week Plan</span>
+        <span class="social-proof__tag">ava 4-Week Plan</span>
+        <span class="social-proof__tag">ethan 4-Week Plan</span>
       </div>
     </section>
     <!-- <h3 class="offer-heading" id="path-to-progress">Claim Your Plan</h3> -->
@@ -480,7 +480,7 @@ placeholder.replaceWith(iframe);
     </div>
 
 
-    <p class="offer-personalization" id="offerNamePrompt">Athlete, claim your calisthenics workout plan</p>
+    <p class="offer-personalization" id="offerNamePrompt">Athlete, claim your workout plan</p>
 
     <div class="rating-summary" aria-label="Average rating 4.8 out of 5">
       <div class="rating-summary__row">
