--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -720,10 +720,10 @@ Card
 </div> -->
 
       <p id="planSummary" class="plan-summary">12-Week Plan</p>
-      <p class="payment-powered">
+      <!-- <p class="payment-powered">
         Payments are securely processed by Stripe on behalf of Raising The Bar App Ltd, the platform powering this
         experience.
-      </p>
+      </p> -->
       <!-- PayPal -->
       <!-- <div id="paypalMarkContainer" style="margin-top:20px;"></div> -->
 
